<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListingBOF">


    <TextView
        android:id="@+id/bof_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:onClick="onTitleClicked"
        android:scrollHorizontally="true"
        android:text="@string/bof"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/start_stop_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@drawable/button_text_color"
        android:onClick="onStartStopClicked"
        android:text="@string/start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bof_title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/persons_view"
        android:layout_width="359dp"
        android:layout_height="390dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_mock" />


    <Button
        android:id="@+id/add_mock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="140dp"
        android:onClick="onAddMockClicked"
        android:text="@string/add_mock"
        app:layout_constraintStart_toEndOf="@+id/start_stop_btn"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sort_text"
        android:layout_width="45dp"
        android:layout_height="26dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="8dp"
        android:text="@string/sort"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/start_stop_btn"
        app:layout_constraintTop_toTopOf="@+id/start_stop_btn" />

    <Spinner
        android:id="@+id/filter_spinner"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="76dp"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toEndOf="@+id/sort_text"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/fav_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:onClick="onFavoriteButtonClicked"
        android:text="FAVORITES"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.37"
        app:layout_constraintStart_toEndOf="@+id/add_mock"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/view_sessions_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:onClick="onViewSessionsClicked"
        android:text="RENAME A SESSION"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/persons_view" />


</androidx.constraintlayout.widget.ConstraintLayout>